compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_types_inference_neg_operand_mismatch.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/diagnostics/types/inference_neg_operand_mismatch.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × numeric operand required
   ╭─[tests/fixtures/diagnostics/types/inference_neg_operand_mismatch.ml:2:7]
 1 │ fn main() {
 2 │   dbg(-true)
   ·       ──┬──
   ·         ╰── this negation expression has type `bool`
 3 │ }
   ╰────
  help: use an i64 or f64 value here
